Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10486

Automatic recovery from compaction failure in ForestDB

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • feature-backlog
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Triaged
    • 1
    • No
    • June 30 - July 18

    Description

      If a crash happens while the compactor interleaves with the writer, we should provide an automatic way of recovering from the crash without asking the user to invoke "compact_recovery" API.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            chiyoung Chiyoung Seo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty