MB-10486: Auto recover from compaction failure

store the new compacted filename into the current file header
before starting compaction
and call fdb_recover_compaction if there is a new filename in the
header found during fdb_open
if during fdb_recover_compaction new file has more entries
then mark self as remove pending so clean up can happen

Added test case auto_recover_compact_ok_test()

Change-Id: I3ea2f4af8f1e4623ad199e3b022ae622f79fe9a0